fix: extra padding in wizard in modal

--- a/site/assets/src/scss/blocks/wizard.scss
+++ b/site/assets/src/scss/blocks/wizard.scss
@@ -11,7 +11,6 @@
     position: sticky;
     top: 0;
     padding-block: spacing(0);
-    margin-inline: -0.5rem;
     z-index: 5;
     background-color: color('white');
 }
