--- a/site/assets/src/scss/utilities/position.scss
+++ b/site/assets/src/scss/utilities/position.scss
@@ -19,6 +19,9 @@
     &.bottom {
         bottom: 0;
     }
+    &.bottom-0 {
+        bottom: spacing(0);
+    }
 
     &.left {
         left: 0;
